--- a/career_service/Dockerfile.python-dev-deploy
+++ b/career_service/Dockerfile.python-dev-deploy
@@ -27,7 +27,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY src/ .
 
 # Expose the port the app runs on
-EXPOSE 5000
+EXPOSE 5001
 
 ENV FLASK_RUN_HOST=0.0.0.0
-CMD ["python", "app.py", "--debug",  "--port=5000", "--host=0.0.0.0"]
+CMD ["python", "dispatch.py", "--debug",  "--port=5001", "--host=0.0.0.0"]
