--- a/career_service/Dockerfile.python-for-dev
+++ b/career_service/Dockerfile.python-for-dev
@@ -1,7 +1,6 @@
-# Use the official Python 3.11 slim image from the Docker Hub
 FROM python:3.13-slim
 
-# Install network diagnostics utilities
+# Install network diagnostics utilities and git
 RUN apt-get update && apt-get install -y \
     curl \
     wget \
@@ -11,6 +10,7 @@ RUN apt-get update && apt-get install -y \
     dnsutils \
     net-tools \
     telnet \
+    git \
     && apt-get clean
 
 # Set the working directory
@@ -26,7 +26,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Expose the port the app runs on
-EXPOSE 5000
+EXPOSE 5001
 
 # Set the environment variables
 ENV FLASK_APP=app.py
