--- a/user_service/Dockerfile.python-dev-deploy
+++ b/user_service/Dockerfile.python-dev-deploy
@@ -30,4 +30,4 @@ COPY src/ .
 EXPOSE 5000
 
 ENV FLASK_RUN_HOST=0.0.0.0
-CMD ["python", "app.py", "--debug",  "--port=5000", "--host=0.0.0.0"]
+CMD ["python", "dispatch.py", "--debug",  "--port=5000", "--host=0.0.0.0"]
