Upload is working now

--- a/user_service/Dockerfile.python-for-dev
+++ b/user_service/Dockerfile.python-for-dev
@@ -11,6 +11,7 @@ RUN apt-get update && apt-get install -y \
     dnsutils \
     net-tools \
     telnet \
+    git \
     && apt-get clean
 
 # Set the working directory
