--- a/user_service/Dockerfile.python-for-dev
+++ b/user_service/Dockerfile.python-for-dev
@@ -21,6 +21,7 @@ WORKDIR /app
 COPY requirements.txt .
 
 # Install the dependencies
+RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application
