--- a/user_service/requirements.txt
+++ b/user_service/requirements.txt
@@ -5,3 +5,10 @@ python-dotenv==0.19.2
 python-jwt==4.0.0
 bcrypt==3.2.0
 Werkzeug==2.0.3
+
+# Test Dependencies
+pytest==7.4.3
+pytest-cov==4.1.0
+pytest-mock==3.12.0
+faker==20.1.0
+coverage==7.3.2
