--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.0.0",
-    "react-scripts": "latest"
+    "react-scripts": "latest",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
@@ -21,6 +22,7 @@
     "@types/react": "^17.0.83",
     "@types/react-dom": "^17.0.26",
     "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.34",
     "typescript": "^4.9.5"
   },
   "browserslist": {
