--- a/career_service/requirements.txt
+++ b/career_service/requirements.txt
@@ -5,3 +5,6 @@ python-dotenv==0.19.2
 python-jwt==4.0.0
 bcrypt==3.2.0
 Werkzeug==2.0.3
+pdfplumber==0.7.4
+python-docx==0.8.11
+typing-extensions==4.5.0
